# VINS-Fusion-GPU-BA

./: README.md
config/euroc/: euroc_stereo_imu_config.yaml
config/kitti_raw/: kitti_10_03_config.yaml
global_fusion/src/: globalOpt.cpp  globalOptNode.cpp
loop_fusion/src/: pose_graph.cpp  pose_graph_node.cpp
plots/MH_01_easy/: vio.txt  vio_loop.txt
vins_estimator/: CMakeLists.txt
vins_estimator/src/cuda_bundle_adjustment/: CMakeLists.txt  common.h  factors.cpp  factors.h  imu_allocator.cpp  imu_allocator.h  levenberg_lambda.cpp  levenberg_lambda.h  proj_allocators.cpp  proj_allocators.h  shape_manager.cpp  shape_manager.h  simple_marg_factor.cpp  simple_marg_factor.h  sliding_window.cpp  sliding_window.h  utility.cpp  utility.h
vins_estimator/src/cuda_bundle_adjustment/cuda_kernel_funcs/: cublas_funcs.cu  cublas_funcs.cuh  cusolver_funcs.cu  cusolver_funcs.cuh  device_utils.cu  device_utils.cuh  imu_factor.cu  imu_factor.cuh  launch_kernels.cu  launch_kernels.cuh  proj_1f2c_factor.cu  proj_1f2c_factor.cuh  proj_2f1c_factor.cu  proj_2f1c_factor.cuh  proj_2f2c_factor.cu  proj_2f2c_factor.cuh  solve_delta.cu  solve_delta.cuh  update_states.cu  update_states.cuh
vins_estimator/src/cuda_bundle_adjustment/cuda_streams/: block_range_cuda_stream_set.cu  block_range_cuda_stream_set.cuh  hessian_rhs_cuda_stream_set.cu  hessian_rhs_cuda_stream_set.cuh  jacobian_residual_cuda_stream_set.cu  jacobian_residual_cuda_stream_set.cuh  proj_temp_cuda_stream_set.cu  proj_temp_cuda_stream_set.cuh  robust_info_cuda_stream_set.cu  robust_info_cuda_stream_set.cuh  update_cuda_stream_set.cu  update_cuda_stream_set.cuh
vins_estimator/src/cuda_bundle_adjustment/device_memory/: GPUMatrix.h  GPUMatrix_impl.hpp  cuda_error_check.h  imu_dev_ptr_set.cpp  imu_dev_ptr_set.h  imu_gpu_mem_pool.h  proj_1f2c_dev_ptr_set.cpp  proj_1f2c_dev_ptr_set.h  proj_1f2c_gpu_mem_pool.h  proj_2f1c_dev_ptr_set.cpp  proj_2f1c_dev_ptr_set.h  proj_2f1c_gpu_mem_pool.h  proj_2f2c_dev_ptr_set.cpp  proj_2f2c_dev_ptr_set.h  proj_2f2c_gpu_mem_pool.h
vins_estimator/src/estimator/: estimator.cpp  estimator.h  parameters.cpp  parameters.h
vins_estimator/src/utility/: visualization.cpp  visualization.h
